Fix layout issues

--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -15,6 +15,7 @@ $input-focus-border-color: $primary;
 $border-radius: 1rem;
 $input-focus-box-shadow: none !important;
 $input-btn-focus-box-shadow: none !important;
+$custom-select-focus-box-shadow: none !important;
 
 $form-group-margin-bottom: 1.5rem;
 
